[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { git = "https://github.com/Advanced-Programming-2023/Robotic-Lib.git"}
# bevy = "0.12.1"
bevy = { version = "0.11.3" }
time = "0.3.31"
rand = "0.8.5"
bevy_ecs_tilemap = "0.11.1"